fixing body overflow on show success

--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,6 @@ html {
 
 body {
   font-family: "Space Grotesk", sans-serif;
-  overflow-y: hidden;
 }
 
 .flex {
