--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -14,7 +14,6 @@ html {
 }
 body {
   font-family: "Space Grotesk", sans-serif;
-  overflow-y: hidden;
 }
 // display
 .flex {
